# mycityco2-data-processing

./: .bandit  .env.exmple  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  CHANGELOG.md  Makefile  README.md  explanation.html  how-to-guides.html  index.html  mkdocs.yml  pyproject.toml  reference.html  tutorials.html
.github/workflows/: ci.yaml  docs.yaml  orchestrator.yaml
docs/: index.md  tutorials.md
mycityco2_data_process/: __main__.py  cli.py  const.py  logger.py  runner.py  utils.py  wrapper.py
mycityco2_data_process/cli/: cli.py
mycityco2_data_process/data/common/: carbon_factor_mapping.xlsx  odoo.conf
mycityco2_data_process/data/fr/: coa_categories.csv  coa_condition.csv  fr_mapping_coa_exiobase.csv  fr_mapping_immo_exiobase.csv  postal.csv  siren.csv
mycityco2_data_process/importer/: __init__.py  base.py  fr.py
scripts/: datacleaning.py  dropdb.sh  fr_create_csv.py  test2.sh
search/: search_index.json
tests/: check_files.py  datacleaning.py  post_process.py  test.sh  test2.sh  test_version.py
