[tool.poetry]
name = "mycityco2-data-process"
version = "0.1.0"
description = ""
authors = [
    "Adam Bonnet <contact@mycityco2.org>",
    "Remy Zulauff <contact@mycityco2.org>",
]
readme = "README.md"
packages = [{ include = "mycityco2_data_process" }]
homepage = "https://github.com/MyCityCO2/mycityco2-data-processing"
repository = "https://github.com/MyCityCO2/mycityco2-data-processing"

[tool.poetry.dependencies]
python = "^3.8"
typer = { extras = ["all"], version = "^0.9.0" }
loguru = "^0.7.0"
psycopg2-binary = "^2.9.6"
xmltodict = "^0.13.0"
bs4 = "^0.0.1"
otools-rpc = "0.4.4"
pydantic = { extras = ["dotenv"], version = "^1.10.8" }
pandas = "^2.0.2"
multiprocess = "^0.70.14"
lxml = "^4.9.2"
openpyxl = "^3.1.2"
docker = "^6.1.3"
discord-webhook = "^1.1.0"

[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
ruff = "^0.0.284"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
setuptools = "^68.0.0"
bandit = "^1.7.5"
isort = "^5.12.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.17"
mkdocstrings = { extras = ["python"], version = "^0.22.0" }

[tool.poetry.group.semver.dependencies]
python-semantic-release = "^8.0.8"

[tool.poetry.scripts]
mycityco2 = 'mycityco2_data_process.cli.cli:cli'

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B106", "B108", "B608", "B104", "B105"]

[tool.ruff]
src = ["odooghost", "tests"]
ignore = ["E501", "E203"]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
